@@ -1,0 +1,47 @@
+$Id$
+
+Building sqsh on Windows in the Cygwin environment
+
+Cygwin (http://www.cygwin.com) is a free Unix-like environment (complete
+with X Window server, bash, etc.) that you can install on Windows
+machines. sqsh and other Unix tools can be built in that environment
+and then used to access resources/servers/etc as if you were using a
+Windows program.
+
+Building sqsh in the Cygwin environment requires a couple of
+non-standard operations both because the configure script
+hasn't been adapted for Cygwin, and because sqsh can't use the
+Sybase DLLs directly.
+
+1. Generating the appropriate libXXX.a files
+   The cygwin.sh script in this directory can be used to generate
+   these files (libblk.a, libcs.a and libct.a). HOWEVER - this script
+   does not generate usable files with recent (12.5.1 and later)
+   versions of OCS. This directory includes copies of these "libraries"
+   that you should be able to use. Note that these .a files aren't
+   real libraries - they just document the entry points to the DLLs.
+
+2. config.h
+   This file is normally generated by the configure script. You can
+   either use the one provided (which should work), or run configure
+   yourself to generate this file.
+
+3. Makefile
+   The Makefile in this directory has been tailored for use with
+   Cygwin. To use this file directly you need to update the
+   SYBASE_OCOS macro (near the top of the file) to point at your 
+   OpenClient installation - it defaults to c:/sybase/OCS-12_5/
+   The SYBASE_LIBS macro points at the .a files in this directory,
+   and the CPPFLAGS include the extra defines
+   (-D_MSC_VER=800 -D_CYGWIN32_) that are needed to build sqsh in
+   this environment.
+
+Building:
+
+1. Copy config.h to ../src
+2. cd ../src
+3. Run "make -f ../cygwin/Makefile"
+
+You should normally now have a sqsh.exe binary in the src directory.
+
+
